--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "codebuilder-admin",
   "main": "expo-router/entry",
   "version": "1.0.0",
+  "private": true,
   "scripts": {
     "start": "expo start",
     "prebuild": "node scripts/setupBatteryOptimization.js && node scripts/notificationSounds.js",
@@ -17,71 +18,67 @@
   "jest": {
     "preset": "jest-expo"
   },
-  "overrides": {
-    "react-native-reanimated": "~3.16.1"
-  },
   "dependencies": {
-    "@dev-plugins/react-navigation": "^0.1.0",
-    "@expo/vector-icons": "^14.0.4",
-    "@react-native-firebase/app": "^21.7.1",
-    "@react-native-firebase/auth": "^21.7.1",
-    "@react-native-firebase/messaging": "^21.7.1",
-    "@react-navigation/native": "^7.0.0",
-    "@react-navigation/native-stack": "^7.0.0",
-    "babel-preset-expo": "^12.0.5",
-    "dotenv": "^16.4.7",
-    "expo": "~52.0.24",
-    "expo-background-fetch": "~13.0.4",
-    "expo-battery": "~9.0.2",
-    "expo-build-properties": "^0.13.1",
-    "expo-camera": "~16.0.14",
-    "expo-cellular": "~7.0.2",
-    "expo-clipboard": "~7.0.1",
-    "expo-dev-client": "~5.0.8",
-    "expo-device": "~7.0.1",
-    "expo-font": "~13.0.2",
-    "expo-linking": "~7.0.3",
-    "expo-location": "^18.0.5",
-    "expo-media-library": "~17.0.5",
-    "expo-notifications": "~0.29.11",
-    "expo-router": "~4.0.16",
-    "expo-splash-screen": "~0.29.19",
-    "expo-status-bar": "~2.0.0",
-    "expo-system-ui": "~4.0.6",
-    "expo-task-manager": "~12.0.4",
-    "expo-web-browser": "~14.0.1",
-    "firebase": "^11.1.0",
+    "@dev-plugins/react-navigation": "^0.3.1",
+    "@expo/vector-icons": "^14.1.0",
+    "@react-native-firebase/app": "^22.2.1",
+    "@react-native-firebase/auth": "^22.2.1",
+    "@react-native-firebase/messaging": "^22.2.1",
+    "@react-navigation/native": "^7.1.6",
+    "@react-navigation/native-stack": "^7.3.10",
+    "babel-preset-expo": "~13.0.0",
+    "dotenv": "^16.5.0",
+    "expo": "53.0.12",
+    "expo-background-fetch": "^13.1.5",
+    "expo-battery": "^9.1.4",
+    "expo-build-properties": "^0.14.6",
+    "expo-camera": "^16.1.8",
+    "expo-cellular": "^7.1.4",
+    "expo-clipboard": "^7.1.4",
+    "expo-dev-client": "~5.2.1",
+    "expo-device": "^7.1.4",
+    "expo-font": "^13.3.1",
+    "expo-linking": "^7.1.5",
+    "expo-location": "^18.1.5",
+    "expo-media-library": "^17.1.7",
+    "expo-notifications": "^0.31.3",
+    "expo-router": "^5.1.0",
+    "expo-splash-screen": "^0.30.9",
+    "expo-status-bar": "^2.2.3",
+    "expo-system-ui": "~5.0.9",
+    "expo-task-manager": "^13.1.5",
+    "expo-web-browser": "~14.2.0",
+    "firebase": "^11.9.1",
     "fs-extra": "^11.3.0",
     "nativewind": "^4.1.23",
     "path": "^0.12.7",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-native": "0.76.7",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.79.4",
     "react-native-console-view": "^0.0.21",
     "react-native-exception-handler": "^2.10.10",
-    "react-native-gesture-handler": "~2.20.2",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-get-random-values": "^1.11.0",
-    "react-native-maps": "1.18.0",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-svg": "15.8.0",
-    "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-maps": "1.20.1",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "^4.11.1",
+    "react-native-svg": "15.11.2",
+    "react-native-web": "^0.20.0",
+    "react-native-webview": "13.13.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
+    "@babel/core": "^7.27.4",
     "@react-native-community/cli": "latest",
-    "@types/react": "~18.3.12",
+    "@types/react": "^19.1.8",
     "install": "^0.13.0",
-    "jest": "^29.2.1",
-    "jest-expo": "~52.0.2",
-    "react-test-renderer": "18.3.1",
-    "semver": "^7.7.1",
-    "tailwindcss": "^3.4.17",
-    "typescript": "~5.3.3"
+    "jest": "^30.0.0",
+    "jest-expo": "^53.0.7",
+    "react-test-renderer": "^19.1.0",
+    "semver": "^7.7.2",
+    "tailwindcss": "^4.1.10",
+    "typescript": "^5.8.3"
   },
-  "private": true,
   "workspaces": [
     "packages/*"
   ],
